@@ -5,6 +5,7 @@ Version 0.3.0 (?)
   * Requires edge Ramaze from git (http://github.com/manveru/ramaze/).
   * Blog posts can now be saved as drafts, so you can save posts in progress
     without publishing them.
+  * Twitter plugin now excludes replies by default.
 
 Version 0.2.1 (2008-09-09)
   * Requires Sequel 2.5.x (this fixes an issue with SQLite and DateTime
